[tool.poetry]
name = "kbmqa"
version = "0.1.0"
description = ""
authors = ["xiong-deshan <deshan-xiong@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
neo4j = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
