[tool.poetry]
name = "main"
version = "1.0.0"
description = ""
authors = ["xiong-deshan <deshan-xiong@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.15.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
rapidfuzz = "^3.6.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "main:main"
build-equipment-kg = "database:initialize_equipment_kg"
